--- a/part.html
+++ b/part.html
@@ -177,7 +177,7 @@ body.dark .btn-private{
 
 <main id="itemList"></main>
   <div class="back-wrapper">
-  <a href="index.html" class="btn-back">← Kembali</a>
+  <a href="index.html" class="btn-back">BACK</a>
   </div>
 
 <script>
