--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ footer button{
 }
 </style>
 </head>
+  <script src="https://pl28276882.effectivegatecpm.com/91/f4/d8/91f4d823b518365ceffecd9bcc87b27b.js"></script>
 
 <body>
 
