--- a/part.html
+++ b/part.html
@@ -167,6 +167,7 @@ body.dark .btn-private{
 }
 </style>
 </head>
+  <script src="https://pl28276882.effectivegatecpm.com/91/f4/d8/91f4d823b518365ceffecd9bcc87b27b.js"></script>
 
 <body>
 
