--- a/part.html
+++ b/part.html
@@ -221,8 +221,8 @@ if(!partId){
           <img src="${d.image}">
           <h3>${d.title}</h3>
           <div class="btn-group">
-            <a href="${d.link_public}" target="_blank" class="btn btn-public">No Password</a>
-            <a href="${d.link_private}" target="_blank" class="btn btn-private">With Password</a>
+            <a href="${d.publiclink}" target="_blank" class="btn btn-public">No Password</a>
+            <a href="${d.privatelink}" target="_blank" class="btn btn-private">With Password</a>
           </div>
         </div>
       `;
