--- a/part.html
+++ b/part.html
@@ -26,6 +26,15 @@ body.dark{
   --notice-bg:#020617;
   --notice-text:#e5e7eb;
 }
+  header a{
+  color: var(--text);
+  text-decoration: none;
+  font-weight: 700;
+}
+
+header a:hover{
+  opacity: .8;
+}
 *{
   box-sizing:border-box;
   margin:0;
